@@ -1,5 +1,5 @@
 /*
-collapsCat Categories version: 0.9
+collapsCat Categories version: 0.9.1
 Copyright 2007 Robert Felty
 
 This work is largely based on the Fancy Categories plugin by Andrew Rader
