@@ -3,6 +3,7 @@ Collapsing Categories Changelog
 * 0.9.1 (2009.03.02)
     * Fixed bug where top level categories would not be displayed if they
       have no subcategories, and show only sub-categories is selected
+    * Can leave sidebar ID option blank if desired
 
 * 0.9 (2009.02.20)
     * Added option to exclude posts older than certain number of days
